--- a/views/show_presentation.erb
+++ b/views/show_presentation.erb
@@ -25,7 +25,7 @@
 <div id="prezi-content">
     <div id="prezi-player"></div>
     <div id="interaction">
-        <button type="button" onclick="embed()">Embed</button>
-        <button type="button" onclick="goBack()">Go Back</button>
+        <button type="button" class="embed" onclick="embed()">Embed</button>
+        <button type="button" class="back" onclick="goBack()">Go Back</button>
     </div>
 </div>
