--- a/public/css/embed_presentation.css
+++ b/public/css/embed_presentation.css
@@ -48,7 +48,7 @@
     position: relative;
     clear: both;
     height: 100%;
-    width: 50%;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -89,10 +89,11 @@
     box-shadow: 5px 5px 3px 0 rgba(222, 222, 222, 1);
     display: block;
     float: left;
-    margin: 10px;
     min-height: 200px;
-    min-width: 600px;
-    width: 715px;
+    min-width: 200px;
+    width: 100%;
+    height: 240px;
+    padding: 15px;
 }
 
 li.prezi-item > img, li.prezi-item > div {
@@ -106,6 +107,13 @@ li.prezi-item > img, li.prezi-item > div {
 }
 
 .prezi-item .prezi-item-content{
+    margin: 0 auto;
+    position: relative;
+    display: block;
+    padding: 2% 0px;
+    width: 60%;
+    float: left;
+    overflow: hidden;
 }
 
 .prezi-item .prezi-item-info{
@@ -113,12 +121,13 @@ li.prezi-item > img, li.prezi-item > div {
 }
 
 .prezi-item a {
-    display: inline-block;
+    display: block;
     float: left;
-    left: 35px;
-    margin: 5px auto;
+    margin: 20px 20px;
+    padding: 0px;
     position: relative;
-    top: 15px;
+    width: 30%;
+    overflow: hidden;
 }
 
 .prezi-item-content .prezi-item-info h3 {
