--- a/public/css/embed_presentation.css
+++ b/public/css/embed_presentation.css
@@ -40,17 +40,17 @@
 }
 .search-bar {
     width: 70%;
-    margin: 0 auto;
+    margin: 4px auto;
 }
 
-.list_per_search ul{
+/*.list_per_search ul{
     padding: 0px;
     position: relative;
     clear: both;
     height: 100%;
     width: 90%;
     margin: 0 auto;
-}
+}*/
 
 .search-bar button, .prezi-item button, #more_items button {
     -moz-user-select: none;
@@ -84,7 +84,7 @@
 }
 
 
-.prezi-item{
+/*.prezi-item{
     border: 1px solid #e8e5e8;
     box-shadow: 5px 5px 3px 0 rgba(222, 222, 222, 1);
     display: block;
@@ -94,9 +94,9 @@
     width: 100%;
     height: 240px;
     padding: 15px;
-}
+}*/
 
-li.prezi-item > img, li.prezi-item > div {
+/*li.prezi-item > img, li.prezi-item > div {
     display: block;
     float: right;
     position: relative;
@@ -104,9 +104,9 @@ li.prezi-item > img, li.prezi-item > div {
     text-align: center;
     vertical-align: middle;
     width: 50%;
-}
+}*/
 
-.prezi-item .prezi-item-content{
+/*.prezi-item .prezi-item-content{
     margin: 0 auto;
     position: relative;
     display: block;
@@ -128,19 +128,27 @@ li.prezi-item > img, li.prezi-item > div {
     position: relative;
     width: 30%;
     overflow: hidden;
-}
+}*/
 
-.prezi-item-content .prezi-item-info h3 {
+/*.prezi-item-content .prezi-item-info h3 {
     font-size: 20px;
     margin: 10px 0;
+}*/
+
+div.prezi-item-interaction{
+  width: 100%;
+  margin: 0 auto;
 }
 
 div.prezi-item-interaction button[type="button"]{
     display: inline-block;
     border: 1px solid transparent;
     text-decoration: none;
-    padding: 4px 10px;
-    font-size: x-large;
+    padding: 1px 20px;
+    font-size: larger;
+    height: 35px;
+    overflow: hidden;
+
 }
 
 div.prezi-item-interaction button[type="button"]:hover{
@@ -180,6 +188,42 @@ div.prezi-item-interaction button[type="button"]:last-child:hover {
 
 div.prezi-item-interaction button[type="button"]:last-child:active {
     background-color: #398439;
-    border-color: #255625
+    border-color: #255625;
     color: #FFF;
+}
+
+section[class="prezi-items"]{
+  text-align: center;
+}
+
+.prezi_item{
+  border: 1px solid #e8e5e8;
+  box-shadow: 5px 5px 3px 0 rgba(222, 222, 222, 1);
+  display: block;
+  width: 100%;
+}
+
+.thumbnail_link{
+  height: 200px;
+  overflow: hidden;;
+}
+
+.thumbnail_link img{
+  vertical-align: middle;
+  margin: 25px 25px;
+  width: 180px;
+  height: 150px;
+}
+
+.prezi_item_content{
+  display: inline;
+  height: 200px;
+  overflow: hidden;
+  margin: 2px 0px;
+  text-align: center;
+}
+
+.row{
+  width: 80%;
+  margin: 10px auto;
 }
