CoffeScript addeded and main.coffee script create to deal with list_presentations.erb

--- a/views/list_presentations.erb
+++ b/views/list_presentations.erb
@@ -10,9 +10,12 @@
 
 <script type="application/javascript">
 var url_to_embed = "<%= return_embed_url %>"
+var lti_type = "<%= lti_type %>"
 </script>
 
-<script src="javascript/main_list.js" type="application/javascript"></script>
+<!-- <script src="javascript/main_list.js" type="application/javascript"></script> -->
+<script src="coffee/main.js"></script>
+
 
 <div>
     <div class="search-bar">
