--- a/views/show_presentation.erb
+++ b/views/show_presentation.erb
@@ -12,20 +12,27 @@
         var player = new PreziPlayer('prezi-player', {preziId: prezi_id, width: "90%", height: 450, controls:true});
     });
 
+    <% if url_to_embed_sent %>
     function embed(){
+      if(lti_type == "editor_button"){
         location.href = url_to_embed+"?return_type=iframe&url=" + "https%3A%2F%2Fprezi.com%2Fembed%2F" + prezi_id + "%2F&width=400&height=350";
+      }else if(lti_type == "resource_selection"){
+        location.href = url_to_embed+"?return_type=lti_launch_url&url=" + "https%3A%2F%2Fprezi.com%2Fembed%2F" + prezi_id + "%2F&width=400&height=350";
+      }
     }
-
     function goBack(){
         history.go(-1);
     }
+    <% end %>
 
 </script>
 
 <div id="prezi-content">
     <div id="prezi-player"></div>
+    <% if url_to_embed_sent %>
     <div id="interaction">
         <button type="button" class="embed" onclick="embed()">Embed</button>
         <button type="button" class="back" onclick="goBack()">Go Back</button>
     </div>
+    <% end %>
 </div>
