--- a/public/css/loader.css
+++ b/public/css/loader.css
@@ -1,23 +1,20 @@
 .loader_container{
     overflow: hidden;
-    width: 100%;
-    position: relative;
-    margin: 0px auto;
-    padding: 30px;
+    padding: 30px 0px;
 }
 
 .loader {
-  width: 50%;
-  height: 10%;
-  position: relative;
   margin: 5px auto;
   list-style-type: none;
+  height: 40px;
+  padding: 0px;
 }
 
 .loader li {
   float: left;
   position: relative;
 }
+
 
 .circle {
   width: 40px;
