--- a/views/list_presentations.erb
+++ b/views/list_presentations.erb
@@ -20,9 +20,9 @@
     <main class="container">
 
       <nav class="navbar navbar-default navbar-static-top">
-        <div class="container-fluid row">
-          <a class="navbar-brand col-md-2 col-xs-6 col-xs-offset-3" href="#">Prezi LTI Tool</a>
-          <div class="input-group navbar-btn col-md-10 col-xs-12">
+        <div class="container row">
+          <a class="navbar-brand col-md-3 col-xs-12 text-center" href="#">Prezi LTI for Canvas</a>
+          <div class="input-group navbar-btn col-md-9 col-xs-12">
             <input type="text" id="search_prezi" class="form-control" placeholder="What are you looking for on Prezi.com?" autofocus>
             <span class="input-group-btn">
               <button id="search_prezi_trigger" class="btn btn-default" type="button">Go!</button>
@@ -39,5 +39,9 @@
       </div>
 
     </main>
+
+    <footer>
+      <p style="text-align:center; margin-top:30px">Created by <a href="https://www.facebook.com/Hernnani" target="_blank">Hugo Hernani</a>. Portfolio <a href="http://hhernanni.webfactional.com" target="_blank">here</a>.</p>
+    </footer>
   </body>
 </html>
