Initialize on GitHub

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,11 +4,14 @@
 </head>
 <body>
 <p>You should do an lti tool launch at /lti_tool</p>
+<p>For none authentication is required. So that, any consumer and secret key can be added.</p>
+<!--
 <p>For now you can just use the following consumer and secret keys:</p>
-<ul>
+ <ul>
   <li>Consumer key: <b>consumer_key</b></li>
   <li>Secret key: <b>secret_key</b></li>
-</ul>
+</ul> -->
+
 <p>You can get the configuration XML here: <a href="/tool_config.xml">LTI Config</a></p>
 <!--
 <p>
